--- a/src/blog.html
+++ b/src/blog.html
@@ -149,7 +149,7 @@
       </div>
     </header>
   
-    <main class="blog-page"></main>
+    <main class="main"></main>
     
     <footer class="footer">
       <div class="container footer__container">
