--- a/src/article.html
+++ b/src/article.html
@@ -149,7 +149,7 @@
       </div>
     </header>
   
-    <main class="article-page"></main>
+    <main class="main"></main>
   
     <footer class="footer">
       <div class="container footer__container">
