--- a/src/index.html
+++ b/src/index.html
@@ -168,7 +168,7 @@
               <a href="#" class="footer__info-link">Условия возврата заказа</a>
             </li>
             <li class="footer__info-item">
-              <a href="#Блог" class="footer__info-link">Блог</a>
+              <a href="#blog" class="footer__info-link">Блог</a>
             </li>
           </ul>
         </div>
