--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Купить различные товары со скидкой!">
-  <link rel="preload" href="fonts/lato-v24-latin-400.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="preload" href="fonts/lato-v24-latin-700.woff2" as="font" type="font/woff2" crossorigin>
+  <!-- <link rel="preload" href="fonts/lato-v24-latin-400.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="fonts/lato-v24-latin-700.woff2" as="font" type="font/woff2" crossorigin> -->
   <!-- <link rel="preload" href="fonts/lato-v23-latin-900.woff2" as="font" type="font/woff2" crossorigin> -->
 
   <script>
